# hime

./: .clang-format  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  Makefile.am  README.md  configure.ac
.github/workflows/: README.md  build.yml  release.yml
android/: README.md  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/org/hime/android/: HimeEngineInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/hime/android/: HimeSettingsActivity.java
android/app/src/main/java/org/hime/android/core/: HimeEngine.java
android/app/src/main/java/org/hime/android/ime/: HimeInputMethodService.java
android/app/src/main/java/org/hime/android/view/: HimeCandidateView.java  HimeKeyboardView.java
android/app/src/main/jni/: CMakeLists.txt  hime-core.c  hime_jni.c
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/org/hime/android/: HimeEngineTest.java
data/: liu-uni-raw.txt  liu.cin
docs/: BOSHIAMY_SETUP.md  CHANGELOG-recent.md  INPUT_METHODS.md  rime-feature-comparison.md
icons/: gen-platform-icons.py
ios/: CMakeLists.txt  README.md
ios/HIMEApp/: AppDelegate.h  AppDelegate.m  Info.plist.in  main.m
ios/HIMEKeyboard/: HIMEKeyboardViewController.m  Info.plist.in
ios/HIMEKeyboard/Views/: HIMEKeyboardView.h  HIMEKeyboardView.m
ios/HIMEKeyboardTests/: HimeEngineTests.m
ios/Shared/include/: HimeEngine.h  hime-core.h
ios/Shared/src/: HimeEngine.m  hime-core.c
macos/: CMakeLists.txt  README.md
macos/Resources/: Info.plist.in
macos/Resources/en.lproj/: InfoPlist.strings
macos/Resources/zh-Hans.lproj/: InfoPlist.strings
macos/Resources/zh-Hant.lproj/: InfoPlist.strings
macos/include/: HimeEngine.h  hime-core.h
macos/src/: HIMETypingPracticeWindow.h  HIMETypingPracticeWindow.m  HimeEngine.m  HimeInputController.h  HimeInputController.m  hime-core.c  main.m
macos/tests/: HimeEngineTests.m
pime/hime/: __init__.py  hime_engine.py
platform/android/: README.md  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/androidTest/java/org/hime/android/: HimeEngineInstrumentedTest.java
platform/android/app/src/main/java/org/hime/android/: TypingPracticeActivity.java
platform/android/app/src/main/java/org/hime/android/core/: HimeEngine.java
platform/android/app/src/main/java/org/hime/android/ime/: HimeInputMethodService.java
platform/android/app/src/main/jni/: CMakeLists.txt  hime-core.c  hime-core.h
platform/android/app/src/main/res/values/: themes.xml
platform/android/app/src/main/res/xml/: method.xml
platform/android/app/src/test/java/org/hime/android/: HimeConfTest.java  HimeCryptTest.java  HimeEngineTest.java  HimeEngineUninitializedTest.java
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/ios/: CMakeLists.txt
platform/ios/HIMEApp/: TypingPracticeViewController.h  TypingPracticeViewController.m  ViewController.h  ViewController.m  main.m
platform/ios/HIMEApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/ios/HIMEKeyboard/: HIMEKeyboardViewController.h
platform/ios/HIMEKeyboardTests/: HimeConfTests.m  HimeCryptTests.m  HimeEngineTests.m
platform/ios/Shared/src/: hime-core.c
platform/macos/: CMakeLists.txt
platform/macos/include/: HimeEngine.h  hime-core.h
platform/macos/src/: hime-core.c
platform/macos/tests/: HimeEngineTests.m  test-hime-conf.c  test-hime-core.c  test-hime-crypt.c
platform/pime/hime/: README.md  hime_data.py  hime_ime.py  ime.json
platform/pime/hime/data/: zo.kbm
platform/windows/: CMakeLists.txt  LANGUAGE-BAR.md  README.md  gen-manual-pdf.py  mingw-w64-x86_64.cmake
platform/windows/sandbox/: HIME-Sandbox.wsb  README.md  deploy-and-test.bat  mcp-server.py  prepare-sandbox.bat  sandbox-agent.ps1
platform/windows/src/: hime-core.c  hime-install.rc  hime-tsf.cpp  hime-typing-ui.h  hime-uninstall.c  hime-uninstall.rc
platform/windows/tests/: test-hime-conf.c  test-hime-core.c  test-hime-crypt.c
scripts/: format_code.py
shared/: README.md
shared/include/: hime-core.h
shared/src/: hime-core-impl.c
shared/tests/: Makefile  test-hime-core.c
shared/tools/: cin2gtab.c  gtab-debug.c  gtab-debug2.c  gtab-debug3.c
src/: Makefile.am  eve.c  gtab-init.c  hime-cin2gtab.c  hime-conf.c  hime-endian.h  hime-gtab2cin.c  hime-phoa2d.c  hime-setup-list.c  hime-ts-edit.c  hime-tsa2d32.c  hime-tsd2a32.c  hime-tsin2gtab-phrase.c  hime-tslearn.c  hime-typing-practice.c  hime.c  im-addr.c  phrase.c  t2s-lookup.c  tsin-util.c  win-sym.c
src/im-client/: Makefile.am
src/modules/: Makefile.am  chewing-conf.c  chewing.c
tests/: Makefile.am  test-framework.h  test-gtab.c  test-hime-conf.c  test-hime-crypt.c  test-pho.c  test-seq.c  test-utf8  test-utf8.c  test-util  test-util.c
tools/: liu-tab2cin.py
windows/: CMakeLists.txt  KNOWN-ISSUES.md  LANGUAGE-BAR.md  README.md  gen-manual-pdf.py  hime-tsf.def  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
windows/include/: hime-core.h
windows/sandbox/: README.md  deploy-and-test.bat  prepare-sandbox.bat
windows/src/: hime-core.c  hime-install.c  hime-install.rc  hime-tsf.cpp  hime-tsf.rc  hime-typing-ui.c  hime-uninstall.c  hime-uninstall.rc
windows/tests/: test-hime-core.c  test-hime-installer.c
